dev/jwindmiller/slurm-17548776.out
  File "009_ContourL_Reanalysis_CWV.py", line 20
    009
      ^
SyntaxError: invalid token
